email spam detection

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -1,5 +1,29 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "a573f570",
+   "metadata": {},
+   "source": [
+    "## Séparation des données\n",
+    "\n",
+    "On divise les données de départ (les e-mails avec le label spam/ham) en deux parties :\n",
+    "\n",
+    ". 80% pour l’entraînement (X_train, Y_train)\n",
+    "\n",
+    ". 20% pour le test (X_test, Y_test)\n",
+    "\n",
+    "| Email   | Spam ? | Utilisé pour |\n",
+    "| ------- | ------ | ------------ |\n",
+    "| Email 1 | Yes    | Entraînement |\n",
+    "| Email 2 | No     | Entraînement |\n",
+    "| Email 3 | Yes    | Test         |\n",
+    "| Email 4 | No     | Test         |\n",
+    "| ...     | ...    | ...          |\n",
+    "---"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
